bg(ui): fix layout alignment - add padding and margin to divs - modify color scheme for filter div on mobile -modify size of buttons
[Delivers 166870088]

--- a/UI/css/style2.css
+++ b/UI/css/style2.css
@@ -107,7 +107,7 @@ main {
     padding-left: 15px;
     margin-left: 25%;
     width: 75%;
-    color: rgba(0, 0, 0, 0.8);
+    color: rgb(86, 56, 255);
     padding-top: 0px;
     padding: 10px;
 }
@@ -117,11 +117,11 @@ main {
 }
 
 .secondary-color {
-    color: rgb(185, 56, 255);
+    color: rgb(86, 56, 255);
 }
 
 .tertiary-color {
-    color: rgb(56, 195, 255);
+    color: rgb(86, 56, 255);
 }
 
 section {
@@ -134,7 +134,7 @@ body>nav {
 }
 
 main>h1 {
-    background-color: rgba(86, 56, 255, 0.3);
+    /* background-color: rgba(86, 56, 255, 0.3); */
     color: rgb(86, 56, 255);
     width: 98%;
     margin: 10px auto;
@@ -276,21 +276,27 @@ main>div#single-car {
     flex-flow: column nowrap;
 }
 
+main>div#single-car>div {
+
+    margin-bottom: 20px;
+}
+
 main>div#single-car>div:nth-child(1), main>div#single-car>div:nth-child(2) {
     display: flex;
+    width: 100%;
     flex-flow: row nowrap;
     justify-content: center;
     align-items: flex-end;
 }
 
 main>div#single-car>div:nth-child(1)>div:first-child, main>div#single-car>div:nth-child(1)>div:last-child {
-    flex: 1 0 auto;
+    flex: 1 0 100%;
     height: 250px;
     overflow: hidden;
 }
 
 main>div#single-car>div:nth-child(1)>div:first-child>img {
-    width: 75%;
+    width: 100%;
     height: auto;
 }
 
@@ -337,9 +343,10 @@ div#is-sold-div {
 }
 
 main>div#single-car label {
-    font-weight: bolder;
-    color: rgb(56, 195, 255);
-    font-size: 1.2em;
+    
+    color: rgb(86, 56, 255);
+    font-size: 0.8em;
+    font-weight: 250;
 }
 
 main>div#single-car>div:nth-child(3)>div>label::after {
@@ -348,7 +355,9 @@ main>div#single-car>div:nth-child(3)>div>label::after {
 
 main>div#single-car>div:nth-child(2) span, main>div#single-car>div:nth-child(3) span {
     color: rgb(86, 56, 255);
-    font-weight: 300;
+    font-weight: 500;
+    font-size: 1.2em;
+    line-height: 1.2em;
 }
 
 /* style for gallery */
@@ -369,7 +378,9 @@ div#advertisement {
     /* background-image: linear-gradient(white, rgba(144, 12, 63), rgba(144, 12, 63)); */
     /* background-color: rgba(144, 12, 63); */
 }
-
+div#advertisement>header{
+    margin-bottom: 20px;
+}
 div#advertisement>header>button.btn {
     cursor: pointer;
     background-color: #fdfdfd;
@@ -377,8 +388,9 @@ div#advertisement>header>button.btn {
 }
 
 div#advertisement>header>button.btn>span {
-    font-weight: bolder;
+    font-weight: 300;
     font-size: 1.5em;
+    line-height: 1.5em;
     color: rgb(86, 56, 255);
 }
 
@@ -390,6 +402,8 @@ div#advertisement>form, div#advertisement>form>label {
     background-color: rgba(56, 195, 255, 0.2);
     color: rgb(86, 56, 255);
     border-radius: 0.3em;
+    margin-bottom: 20px;
+
 }
 
 div#advertisement>form>div.form-group>label {
@@ -401,7 +415,7 @@ div#advertisement>form>div.form-group>input {
 }
 
 div#advertisement select {
-    width: 90%;
+    width: 100%;
 }
 
 /* Style for Purchase order div */
@@ -428,7 +442,8 @@ div#make-purchase-order input[type=number] {
 }
 
 div#make-purchase-order button {
-    margin: 30px 0 0 0;
+    margin: 22px 0 0 0;
+    
 }
 
 span.make-purchase-order {
@@ -462,6 +477,7 @@ div#delete-post-div {
 
 div#delete-post-div>span.report {
     text-align: justify;
+    line-height: 1.5em;
 }
 
 /* styling for accepting or rejecting purchase order div */
@@ -546,7 +562,7 @@ table {
     border: 1px solid #ddd;
     border-collapse: collapse;
     margin: 15px 0 0 0;
-    padding: 0;
+    padding: 10px;
     width: 100%;
     table-layout: fixed;
     color: rgb(86, 56, 255);
@@ -555,24 +571,34 @@ table {
 table thead, table th {
     background-color: #fdfdfd;
     border: 1px solid #fdfdfd;
+    
 }
 
 table caption {
     font-size: 1.3em;
     padding: 10px;
-    color: rgb(185, 56, 255);
+    color: rgb(86, 56, 255);
+    margin: 15px;
 }
 
 table tr {
     background-color: #f8f8f8;
     border: 1px solid #ddd;
-    padding: .35em;
+    /* padding: .35em; */
+}
+
+table td{
+    font-weight: 500;
+    font-size: 0.8em;
+    padding:10px;
 }
 
 td>span.img {
     display: block;
-    /* width: 30px; */
-    height: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: auto;
     overflow: hidden;
     border-radius: 0.5em;
 }
@@ -583,12 +609,12 @@ td>span>img {
 }
 
 td>button {
-    width: 100px;
-    height: 50px;
+    width: auto;
+    height: 35px;
 }
 
 td>button>span {
-    font-size: 0.6em;
+    font-size: 0.7em;
 }
 
 td>button>span {
@@ -600,8 +626,6 @@ tr:nth-child(even) {
 }
 
 table th, table td {
-    padding: 0;
-    font-size: 0.6em;
     text-align: center;
     width: 100%;
     text-overflow: ellipsis;
@@ -610,13 +634,18 @@ table th, table td {
 }
 
 table tr>th:first-child {
-    width: 30px;
+    width: 50px;
+}
+
+table tr>th.table-name {
+    width: 100%;
 }
 
 table th {
     font-size: .85em;
     letter-spacing: .1em;
     text-transform: uppercase;
+    font-weight: 100;
 }
 
 /* Responsive design*/
@@ -673,7 +702,7 @@ table th {
     }
     main>div#single-car>div:nth-child(3)>div {
         flex: 1 0 50%;
-        margin-top: 20px;
+        /* margin-top: 20px; */
     }
     /* End of style for a single car*/
 }
@@ -684,6 +713,7 @@ table th {
     }
     table caption {
         font-size: 1.3em;
+        
     }
     table thead {
         border: none;
@@ -711,6 +741,7 @@ table th {
     }
     td>button {
         width: 100%;
+        height: 60px;
     }
     table td::before {
         /*
@@ -805,7 +836,7 @@ table th {
         top: 0px;
         width: 100%;
         padding: 15px;
-        border-bottom: 1px solid rgb(56, 195, 255);
+        border-bottom: 1px solid rgb(86, 56, 255);
     }
     body>nav>span {
         display: block;
@@ -827,8 +858,9 @@ table th {
         top: 0;
         left: 0;
         height: 100vh;
-        color: #fdfdfd;
-        background-color: rgb(85, 56, 255);
+        background-color: #fdfdfd;
+        color: rgb(85, 56, 255);
+        padding: 10px;
     }
     section label {
         font-size: 1.2em;
@@ -884,6 +916,7 @@ table th {
 
 div#purchase-order, div#advert, div#admin-page {
     display: none;
+    flex: 1 1 100%;
 }
 
 div#purchase-order {
@@ -892,4 +925,8 @@ div#purchase-order {
 
 div#delete-post-div {
     color: rgb(86, 56, 255);
+}
+
+div#delete-post-div>div {
+    margin: 20px 0px;
 }
